store/src/styles/sections/our-plans.scss
/* ... */
@media (max-width: 1024px) {
   .hern-plan {
      display: block;
      padding: unset;

      &__cover-image {
         display: block;
         margin-bottom: 14px;
      }

      &__select-plan__btn {
         // width: 100%;

         width: calc(100% - 32px);
         display: flex;
         margin: 0 16px 16px 16px;
         border-radius: 999999999px;
         padding: 12px;
         background-color: var(--hern-accent);
         justify-content: center;
         align-items: center;
         font-weight: 500;
         font-family: 'Inter';
         font-size: 18px;
         color: #fff;
      }

      &__icon-title-wrapper {
         display: flex;
         align-items: center;
         margin: 16px;
      }

      &__servings {
         display: flex;
         padding: 0 16px;
         margin-top: 32px;
         align-items: center;
         justify-content: space-between;
         width: 100%;
      }

      &__item-counts {
         display: flex;
         padding: 0 16px;
         margin-top: 16px;
         align-items: center;
         justify-content: space-between;
         width: 100%;
      }

      &__pricing {
         margin: 40px 0 16px 0;
         padding: 0 16px;
         font-weight: 600;
         font-size: 14px;
         line-height: 17px;
         color: rgba(51, 51, 51, 0.6);
         text-transform: capitalize;
         display: flex;
         justify-content: space-between;
      }
   }
}

.hern-plans__skeletons {
   margin: auto;
   max-width: 1200px;
   width: calc(100vw - 40px);
   display: flex;
   justify-content: center;
   display: grid;
   grid-gap: 24px;
   grid-template-columns: 1fr 1fr;
   padding: 24px 0;
   > li {
      height: 420px;
      display: flex;
      flex-direction: column;
      border-radius: 16px;
      padding: 0.75rem;
      border-width: 1px;
      > header {
         @extend %loading;
         height: 40px;
         width: 58.333333%;
      }
      > main {
         margin-top: 1.5rem;
         margin-bottom: 1.5rem;

         > section {
            @extend %loading;
            height: 4rem;
            border-radius: 8px;
            &:first-of-type(1) {
               width: 80%;
            }
            margin-bottom: 1.5rem;
         }
      }
      > footer {
         margin-top: auto;
         > span {
            @extend %loading;
            height: 3rem;
            border-radius: 9999px;
            display: block;
         }
      }
   }
   @media (max-width: 1024px) {
      grid-template-columns: 1fr;
      > li {
         width: 100%;
         max-width: 100%;
      }
   }
}
%loading {
   animation: loading 1s linear infinite alternate;
   @keyframes loading {
      0% {
         background-color: hsl(200, 20%, 90%);
      }
      100% {
         background-color: hsl(200, 20%, 95%);
      }
   }
}

// Card View Styles
.hern-plans__card {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(420px, 1fr));
   grid-gap: 80px;
   justify-content: center;
   align-items: center;
   margin-bottom: 64px;

   &__wrapper {
      max-width: 980px;
      width: calc(100vw - 2rem);
      margin: 16px auto;
   }
   &__heading {
      font-family: 'Lato';
      font-size: 24px;
      font-weight: 600;
      text-align: center;
      margin: 32px 0;
   }
}
/* ... */

